fix top of modal from going offscreen vertically on mobile (landscape orientation)

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -41,6 +41,10 @@
     padding: 4rem;
     max-width: 70rem;
   }
+
+  @include m.orientation-landscape {
+    top: 50%;
+  }
 }
 
 .back-modal {
